<resources>
    <string name="app_name">Location Saver</string>

    <string name="title_location_tab">Location</string>
    <string name="title_list_tab">List</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_show_location">Show locations in map</string>
    <string name="action_remove_marker">Remove all markers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_accuracy_string1">Accuracy:</string>
    <string name="text_accuracy_string2">feet</string>
    <string name="edit_entry_name">Name</string>
    <string name="edit_entry_address">Address</string>
    <string name="edit_entry_coords">Coords</string>
    <string name="edit_entry_note">Note</string>
    <string name="edit_entry_menu_cancel">Cancel</string>
    <string name="edit_entry_menu_save">Save</string>
    <string name="edit_entry_menu_get_address">Get address</string>

    <string name="no_location_data_provided">No location data provided for address</string>
    <string name="service_not_available">Cannot get address. Check network connection.</string>
    <string name="invalid_lat_long_used">Invalid latitude/longitude</string>
    <string name="no_address_found">No address found for current location</string>
    <string name="address_found">Address found for current location</string>

    <string name="no_geocoder_available">Geocoder unavailable. No address updates.</string>
    <string name="incorrect_coords">Incorrect coordinates. Address not updated.</string>

    <string name="error_making_directory">Error making image directory</string>



    <string name="select_one_item">Please select one item to edit</string>
    <string name="name_field_required">Please enter a valid name</string>
    <string name="number_field_invalid">Please enter a valid coordinate</string>
    <string name="deselect_all_items">To open an entry, deselect all items and click</string>
    <string name="address_received">Location address received from Geocoder</string>

    <string name="delete_items_alert">Please confirm</string>
    <string name="delete_item_message_1">Delete </string>
    <string name="delete_item_message_2"> item?</string>
    <string name="delete_items_message_1">Delete these </string>
    <string name="delete_items_message_2"> items?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="googleapiclient_connection_failed">Failed to connect to GoogleApiClient. Please try later.</string>
    <string name="cannot_achieve_accuracy">Unable to fix location within required accuracy. Location not saved.</string>
    <string name="location_saved">Successfully saved current location.</string>
    <string name="no_saved_location">No saved location yet</string>
    <string name="press_save_button_hint">Click icon to save location</string>
    <string name="saving_location">Saving location...</string>
    <string name="please_wait">Please wait a few moments</string>
    <string name="location_failed">Cannot get location</string>
    <string name="location_inaccurate">Inaccurate location</string>
    <string name="please_try_later">Please try again later</string>
    
    <string name="must_have_permission">Permissions not granted. Location Saver will now exit</string>
    <string name="no_location_permission">No permission for accessing location</string>
</resources>
