<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListFragment" >

    <item
        android:id="@+id/action_show_location"
        android:icon="@drawable/icon_map_location"
        android:orderInCategory="100"
        android:title="@string/action_show_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/icon_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/icon_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>