<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorPrimary"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/root_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.locationsaver.EditEntryActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="4dp"
                    android:text="@string/edit_entry_name"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="4dp"
                    android:text="@string/edit_entry_coords"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/coords_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="4dp"
                    android:text="@string/edit_entry_address"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="4dp"
                    android:text="@string/edit_entry_note"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/note_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7" />
            </LinearLayout>

            <ImageView
                android:id="@+id/entry_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>


